# mcp-pdf-reader

./: .gitignore  Dockerfile  LICENCE  README.md  README_ZH.md  UPGRADE_GUIDE.md  docker-compose.yml  pyproject.toml  smithery.yaml
.github/: copilot-instructions.md
src/pdf_reader_mcp/: __main__.py  server.py  server_old.py  server_pymupdf.py
